_gen/LuaParser.py
# Generated from C:/Users/91018/PycharmProjects/XASM_Assembler/_gen\Lua.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class LuaParser ( Parser ):

    grammarFileName = "Lua.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "'break'", "'do'", "'end'", 
                     "'while'", "'if'", "'then'", "'elseif'", "'else'", 
                     "'function'", "'global'", "'return'", "'.'", "':'", 
                     "','", "'nil'", "'false'", "'true'", "'('", "')'", 
                     "'['", "']'", "'...'", "'{'", "'}'", "'or'", "'and'", 
                     "'<'", "'>'", "'<='", "'>='", "'~='", "'=='", "'..'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'//'", "'&'", "'|'", 
                     "'~'", "'<<'", "'>>'", "'not'", "'#'", "'^'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NAME", "NORMALSTRING", 
                      "CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", 
                      "HEX_FLOAT", "COMMENT", "LINE_COMMENT", "WS", "SHEBANG" ]

    RULE_chunk = 0
    RULE_block = 1
    RULE_stat = 2
    RULE_retstat = 3
    RULE_funcname = 4
    RULE_varlist = 5
    RULE_namelist = 6
    RULE_explist = 7
    RULE_exp = 8
    RULE_prefixexp = 9
    RULE_functioncall = 10
    RULE_varOrExp = 11
    RULE_var = 12
    RULE_varSuffix = 13
    RULE_nameAndArgs = 14
    RULE_args = 15
    RULE_functiondef = 16
    RULE_funcbody = 17
    RULE_parlist = 18
    RULE_tableconstructor = 19
    RULE_fieldlist = 20
    RULE_field = 21
    RULE_fieldsep = 22
    RULE_operatorOr = 23
    RULE_operatorAnd = 24
    RULE_operatorComparison = 25
    RULE_operatorStrcat = 26
    RULE_operatorAddSub = 27
    RULE_operatorMulDivMod = 28
    RULE_operatorBitwise = 29
    RULE_operatorUnary = 30
    RULE_operatorPower = 31
    RULE_number = 32
    RULE_string = 33

    ruleNames =  [ "chunk", "block", "stat", "retstat", "funcname", "varlist", 
                   "namelist", "explist", "exp", "prefixexp", "functioncall", 
                   "varOrExp", "var", "varSuffix", "nameAndArgs", "args", 
                   "functiondef", "funcbody", "parlist", "tableconstructor", 
                   "fieldlist", "field", "fieldsep", "operatorOr", "operatorAnd", 
                   "operatorComparison", "operatorStrcat", "operatorAddSub", 
                   "operatorMulDivMod", "operatorBitwise", "operatorUnary", 
                   "operatorPower", "number", "string" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    NAME=50
    NORMALSTRING=51
    CHARSTRING=52
    LONGSTRING=53
    INT=54
    HEX=55
    FLOAT=56
    HEX_FLOAT=57
    COMMENT=58
    LINE_COMMENT=59
    WS=60
    SHEBANG=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ChunkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def EOF(self):
            return self.getToken(LuaParser.EOF, 0)

        def getRuleIndex(self):
            return LuaParser.RULE_chunk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChunk" ):
                listener.enterChunk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChunk" ):
                listener.exitChunk(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChunk" ):
                return visitor.visitChunk(self)
            else:
                return visitor.visitChildren(self)




    def chunk(self):

        localctx = LuaParser.ChunkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_chunk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.block()
            self.state = 69
            self.match(LuaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.StatContext)
            else:
                return self.getTypedRuleContext(LuaParser.StatContext,i)


        def retstat(self):
            return self.getTypedRuleContext(LuaParser.RetstatContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LuaParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LuaParser.T__0) | (1 << LuaParser.T__2) | (1 << LuaParser.T__3) | (1 << LuaParser.T__5) | (1 << LuaParser.T__6) | (1 << LuaParser.T__10) | (1 << LuaParser.T__11) | (1 << LuaParser.T__19) | (1 << LuaParser.NAME))) != 0):
                self.state = 71
                self.stat()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LuaParser.T__12:
                self.state = 77
                self.retstat()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LuaParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Do_end_statContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDo_end_stat" ):
                listener.enterDo_end_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDo_end_stat" ):
                listener.exitDo_end_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDo_end_stat" ):
                return visitor.visitDo_end_stat(self)
            else:
                return visitor.visitChildren(self)


    class Assign_statContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var(self):
            return self.getTypedRuleContext(LuaParser.VarContext,0)

        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_stat" ):
                listener.enterAssign_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_stat" ):
                listener.exitAssign_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stat" ):
                return visitor.visitAssign_stat(self)
            else:
                return visitor.visitChildren(self)


    class Break_statContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreak_stat" ):
                listener.enterBreak_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreak_stat" ):
                listener.exitBreak_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak_stat" ):
                return visitor.visitBreak_stat(self)
            else:
                return visitor.visitChildren(self)


    class While_statContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)

        def block(self):
            return self.getTypedRuleContext(LuaParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stat" ):
                listener.enterWhile_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stat" ):
                listener.exitWhile_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stat" ):
                return visitor.visitWhile_stat(self)
            else:
                return visitor.visitChildren(self)


    class Func_def_statContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcname(self):
            return self.getTypedRuleContext(LuaParser.FuncnameContext,0)

        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_def_stat" ):
                listener.enterFunc_def_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_def_stat" ):
                listener.exitFunc_def_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_def_stat" ):
                return visitor.visitFunc_def_stat(self)
            else:
                return visitor.visitChildren(self)


    class Func_call_statContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functioncall(self):
            return self.getTypedRuleContext(LuaParser.FunctioncallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_call_stat" ):
                listener.enterFunc_call_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_call_stat" ):
                listener.exitFunc_call_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_call_stat" ):
                return visitor.visitFunc_call_stat(self)
            else:
                return visitor.visitChildren(self)


    class Global_func_def_statContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(LuaParser.NAME, 0)
        def funcbody(self):
            return self.getTypedRuleContext(LuaParser.FuncbodyContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_func_def_stat" ):
                listener.enterGlobal_func_def_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_func_def_stat" ):
                listener.exitGlobal_func_def_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_func_def_stat" ):
                return visitor.visitGlobal_func_def_stat(self)
            else:
                return visitor.visitChildren(self)


    class Empty_statContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmpty_stat" ):
                listener.enterEmpty_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmpty_stat" ):
                listener.exitEmpty_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmpty_stat" ):
                return visitor.visitEmpty_stat(self)
            else:
                return visitor.visitChildren(self)


    class Global_var_statContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var(self):
            return self.getTypedRuleContext(LuaParser.VarContext,0)

        def exp(self):
            return self.getTypedRuleContext(LuaParser.ExpContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_var_stat" ):
                listener.enterGlobal_var_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_var_stat" ):
                listener.exitGlobal_var_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_var_stat" ):
                return visitor.visitGlobal_var_stat(self)
            else:
                return visitor.visitChildren(self)


    class If_statContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LuaParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.ExpContext)
            else:
                return self.getTypedRuleContext(LuaParser.ExpContext,i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.BlockContext)
            else:
                return self.getTypedRuleContext(LuaParser.BlockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stat" ):
                listener.enterIf_stat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stat" ):
                listener.exitIf_stat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stat" ):
                return visitor.visitIf_stat(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = LuaParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = LuaParser.Empty_statContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(LuaParser.T__0)
                pass

            elif la_ == 2:
                localctx = LuaParser.Assign_statContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.var()
                self.state = 82
                self.match(LuaParser.T__1)
                self.state = 83
                self.exp(0)
                pass

            elif la_ == 3:
                localctx = LuaParser.Func_call_statContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.functioncall()
                pass

            elif la_ == 4:
                localctx = LuaParser.Break_statContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.match(LuaParser.T__2)
                pass

            elif la_ == 5:
                localctx = LuaParser.Do_end_statContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.match(LuaParser.T__3)
                self.state = 88
                self.block()
                self.state = 89
                self.match(LuaParser.T__4)
                pass

            elif la_ == 6:
                localctx = LuaParser.While_statContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 91
                self.match(LuaParser.T__5)
                self.state = 92
                self.exp(0)
                self.state = 93
                self.match(LuaParser.T__3)
                self.state = 94
                self.block()
                self.state = 95
                self.match(LuaParser.T__4)
                pass

            elif la_ == 7:
                localctx = LuaParser.If_statContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 97
                self.match(LuaParser.T__6)
                self.state = 98
                self.exp(0)
                self.state = 99
                self.match(LuaParser.T__7)
                self.state = 100
                self.block()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==LuaParser.T__8:
                    self.state = 101
                    self.match(LuaParser.T__8)
                    self.state = 102
                    self.exp(0)
                    self.state = 103
                    self.match(LuaParser.T__7)
                    self.state = 104
                    self.block()
                    self.state = 110
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==LuaParser.T__9:
                    self.state = 111
                    self.match(LuaParser.T__9)
                    self.state = 112
                    self.block()


                self.state = 115
                self.match(LuaParser.T__4)
                pass

            elif la_ == 8:
                localctx = LuaParser.Func_def_statContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 117
                self.match(LuaParser.T__10)
                self.state = 118
                self.funcname()
                self.state = 119
                self.funcbody()
                pass

            elif la_ == 9:
                localctx = LuaParser.Global_func_def_statContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 121
                self.match(LuaParser.T__11)
                self.state = 122
                self.match(LuaParser.T__10)
                self.state = 123
                self.match(LuaParser.NAME)
                self.state = 124
                self.funcbody()
                pass

            elif la_ == 10:
                localctx = LuaParser.Global_var_statContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 125
                self.match(LuaParser.T__11)
                self.state = 126
                self.var()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==LuaParser.T__1:
                    self.state = 127
                    self.match(LuaParser.T__1)
                    self.state = 128
                    self.exp(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RetstatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def explist(self):
            return self.getTypedRuleContext(LuaParser.ExplistContext,0)


        def getRuleIndex(self):
            return LuaParser.RULE_retstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRetstat" ):
                listener.enterRetstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRetstat" ):
                listener.exitRetstat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetstat" ):
                return visitor.visitRetstat(self)
            else:
                return visitor.visitChildren(self)




    def retstat(self):

        localctx = LuaParser.RetstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_retstat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(LuaParser.T__12)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LuaParser.T__10) | (1 << LuaParser.T__16) | (1 << LuaParser.T__17) | (1 << LuaParser.T__18) | (1 << LuaParser.T__19) | (1 << LuaParser.T__24) | (1 << LuaParser.T__36) | (1 << LuaParser.T__43) | (1 << LuaParser.T__46) | (1 << LuaParser.T__47) | (1 << LuaParser.NAME) | (1 << LuaParser.NORMALSTRING) | (1 << LuaParser.CHARSTRING) | (1 << LuaParser.LONGSTRING) | (1 << LuaParser.INT) | (1 << LuaParser.FLOAT))) != 0):
                self.state = 134
                self.explist()


            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LuaParser.T__0:
                self.state = 137
                self.match(LuaParser.T__0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncnameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(LuaParser.NAME)
            else:
                return self.getToken(LuaParser.NAME, i)

        def getRuleIndex(self):
            return LuaParser.RULE_funcname

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncname" ):
                listener.enterFuncname(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncname" ):
                listener.exitFuncname(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncname" ):
                return visitor.visitFuncname(self)
            else:
                return visitor.visitChildren(self)




    def funcname(self):

        localctx = LuaParser.FuncnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcname)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(LuaParser.NAME)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LuaParser.T__13:
                self.state = 141
                self.match(LuaParser.T__13)
                self.state = 142
                self.match(LuaParser.NAME)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==LuaParser.T__14:
                self.state = 148
                self.match(LuaParser.T__14)
                self.state = 149
                self.match(LuaParser.NAME)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LuaParser.VarContext)
            else:
                return self.getTypedRuleContext(LuaParser.VarContext,i)


        def getRuleIndex(self):
            return LuaParser.RULE_varlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarlist" ):
                listener.enterVarlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarlist" ):
                listener.exitVarlist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = LuaParser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.var()
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LuaParser.T__15:
                self.state = 153
                self.match(LuaParser.T__15)
                self.state = 154
                self.var()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NamelistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(LuaParser.NAME)
            else:
                return self.getToken(LuaParser.NAME, i)

        def getRuleIndex(self):
            return LuaParser.RULE_namelist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamelist" ):
                listener.enterNamelist(self)
